--- a/run_config.json
+++ b/run_config.json
@@ -1150,6 +1150,17 @@
         }
       ]
     },
+    {
+      "executable": "coqc",
+      "name": "coq",
+      "ismacrobench": true,
+      "runs": [
+        {
+          "params": "benchmarks/coq/Int.v",
+          "short_name": "Int.v"
+        }
+      ]
+    },
       {
       "executable": "benchmarks/numerical-analysis/qr_decomposition.exe",
       "name": "qr-decomposition",
