- modify import script to local (for now) - change tezos-node version to 7.4 - add macro_plus target and IS_MACRO_PLUS condition to check for running tezos-snapshot script - Add all the dependencies required by tezos-node \n - Temproraily modify the Makefile to check dependency issues

--- a/run_config.json
+++ b/run_config.json
@@ -1470,6 +1470,16 @@
       ]
     },
     {
+      "executable": "benchmarks/snapshot_import/import.exe",
+      "name": "snapshot_import",
+      "tags": ["macro_plus_bench"],
+      "runs": [
+	{
+	  "params": ""
+	}
+      ]
+    },
+    {
       "executable": "benchmarks/numerical-analysis/qr_decomposition.exe",
       "name": "qr-decomposition",
       "tags": [
