--- a/benchmarks/multicore-numerical/dune
+++ b/benchmarks/multicore-numerical/dune
@@ -87,6 +87,10 @@
  (modules mergesort))
 
 (executable
+ (name inverse)
+ (modules inverse))
+
+(executable
  (name evolutionary_algorithm)
  (modules evolutionary_algorithm))
 
@@ -104,7 +108,7 @@
 						 nbody_multicore.exe mergesort.exe mergesort_multicore.exe
 						 floyd_warshall.exe floyd_warshall_multicore.exe
 						 LU_decomposition.exe LU_decomposition_multicore.exe
-             evolutionary_algorithm_multicore.exe evolutionary_algorithm.exe))
+             evolutionary_algorithm_multicore.exe evolutionary_algorithm.exe inverse.exe))
 
 (alias (name buildbench)
        (deps game_of_life.exe matrix_multiplication.exe quicksort.exe
