--- a/benchmarks/irmin/dune
+++ b/benchmarks/irmin/dune
@@ -1,5 +1,11 @@
 (executable
 	(name irmin_mem_rw)
-	(libraries irmin irmin-mem lwt.unix))
+	(modules irmin_mem_rw)
+	(libraries irmin irmin-mem lwt lwt.unix))
 
-(alias (name buildbench) (deps irmin_mem_rw.exe))
+(executable
+	(name layers)
+	(modules layers)
+	(libraries irmin_pack irmin_layers index fmt logs lwt yojson unix cmdliner))
+
+(alias (name buildbench) (deps layers.exe irmin_mem_rw.exe))
